Tratando de agregar CMake a Cretu

--- a/Cretu/CMakeLists.txt
+++ b/Cretu/CMakeLists.txt
@@ -1,11 +1,38 @@
 cmake_minimum_required(VERSION 2.8.8)
 
+### Project
+
 project(cretu_project C CXX)
 
+### Dependencies
+
+find_package(CUDA REQUIRED)
 find_package(OpenCV REQUIRED)
-include_directories(${OpenCV_INCLUDE_DIRS})
 
-file(GLOB srcs ./*.cpp ./*.h*)
+set(INC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
+### CUDA Kernels
+
+set(CUDAK_DIR ${CMAKE_CURRENT_SOURCE_DIR}/cuda)
+MESSAGE( ${OpenCV_INCLUDE_DIRS} )
+
+SET(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-O3 -gencode arch=compute_20,code=sm_20)
+#cuda_compile(CudaKernel ${CUDAK_DIR}/segment.cu)
+cuda_add_library(CudaKernels ${CUDAK_DIR}/segment.cu)
+add_definitions(-DGPU_OPENCV_ENABLE)
+
+
+### APP
+
+file(GLOB srcs ./src/*.cpp ${INC_DIR}/*.h ./cuda/*.cu)
+
+# Executable called "cretu_app" built from sourcefiles
 add_executable(cretu_app ${srcs})
-target_link_libraries(sample_app ${OpenCV_LIBS})
+
+# Indicate where include files are
+include_directories(${INC_DIR})
+
+# Link executable to libraries
+target_link_libraries(cretu_app
+						CudaKernels
+						${OpenCV_LIBS})
