CMakeLists.txt can be used to build Cretu now.

--- a/Cretu/CMakeLists.txt
+++ b/Cretu/CMakeLists.txt
@@ -17,6 +17,9 @@ set(CUDAK_DIR ${CMAKE_CURRENT_SOURCE_DIR}/cuda)
 MESSAGE( ${OpenCV_INCLUDE_DIRS} )
 
 SET(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-O3 -gencode arch=compute_20,code=sm_20)
+#add_compile_options(-c -v)
+add_definitions(-D_FORCE_INLINES)
+cuda_include_directories(${OpenCV_INCLUDE_DIRS})
 #cuda_compile(CudaKernel ${CUDAK_DIR}/segment.cu)
 cuda_add_library(CudaKernels ${CUDAK_DIR}/segment.cu)
 add_definitions(-DGPU_OPENCV_ENABLE)
