Programming control point history.  Beware... the debuger freezes the pc, still strugling with device double pointers.

--- a/OpenCV/GpuTrack/CMakeLists.txt
+++ b/OpenCV/GpuTrack/CMakeLists.txt
@@ -29,15 +29,22 @@ find_package(CUDA REQUIRED)
 list(APPEND CUDA_NVCC_FLAGS -O3
      -gencode arch=compute_52,code=sm_52	#GeForce GTX 960
      -gencode arch=compute_50,code=sm_50	#GeForce GTX 960M
-     -gencode arch=compute_20,code=sm_20	#GeForce GT 750
+     #-gencode arch=compute_20,code=sm_20	#GeForce GT 750
+     #--relocatable-device-code true
+     -rdc=true
+     -G -g									#debug
 )
 add_definitions(-D_FORCE_INLINES)
+set( CUDA_SEPARABLE_COMPILATION ON)
+
+set(cudasrcs cusrc/linear_snake.cu)
+
 CUDA_COMPILE(CUDA_OBJECTS
 	cusrc/linear_snake.cu
 	OPTIONS ${CUDA_FLAGS}
 )
-LIST(APPEND srcs
-	${CUDA_OBJECTS}
+CUDA_ADD_LIBRARY(linear_snake
+	${cudasrcs}
 )
 
 # -+- app
@@ -49,4 +56,6 @@ set(cuda_sources cusrc/linear_snake.cu)
 add_executable(gpu_track ${srcs} )
 
 # Link executable to libraries
-target_link_libraries(gpu_track ${OpenCV_LIBS} ${CUDA_LIBRARIES})
+message(${CUDA_LIBRARIES})
+
+target_link_libraries(gpu_track ${OpenCV_LIBS} ${CUDA_LIBRARIES} linear_snake cudadevrt)
